fix menu button alignment

--- a/digital_land_frontend/templates/components/header-bar/_header-bar.scss
+++ b/digital_land_frontend/templates/components/header-bar/_header-bar.scss
@@ -1,8 +1,14 @@
 .dl-header {
+  
   .govuk-header__content {
     width: 100%;
     padding-left: 0;
   }
+
+  .govuk-header__menu-button {
+    top: .7em;
+  }
+
 }
 
 .dl-header--full {
